--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@gumlet/gif-resize",
-  "version": "1.3.1",
-  "description": "Nodejs plugin to resize GIFs",
+  "name": "@interfocus/gif-resize",
+  "version": "1.0.0",
+  "description": "Resize GIFs",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gumlet/gif-resize.git"
+    "url": "git+https://github.com/hebruce110/gif-resize.git"
   },
   "engines": {
     "node": ">=10"
@@ -38,9 +38,9 @@
     "jest": "^25.0.0"
   },
   "bugs": {
-    "url": "https://github.com/gumlet/gif-resize/issues"
+    "url": "https://github.com/hebruce110/gif-resize/issues"
   },
-  "homepage": "https://github.com/gumlet/gif-resize#readme",
+  "homepage": "https://github.com/hebruce110/gif-resize#readme",
   "directories": {
     "test": "tests"
   },
